--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-cli-deploy-ssh-upload",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "0.0.1",
+  "description": "An ember-cli-deploy plugin to upload to SSH",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -9,24 +9,25 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "ember try:testall"
+    "test": "node tests/runner.js"
   },
-  "repository": "",
+  "repository": "https://github.com/smartkarma/ember-cli-deploy-ssh-upload",
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
+  "author": "Varoot Phasuthadol",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
-    "ember-ajax": "0.7.1",
+    "chai": "^3.5.0",
+    "ember-ajax": "2.3.2",
     "ember-cli": "2.3.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-qunit": "^1.2.1",
+    "ember-cli-qunit": "^2.0.0",
     "ember-cli-release": "0.2.8",
     "ember-cli-sri": "^2.0.0",
     "ember-cli-uglify": "^1.2.0",
@@ -36,14 +37,21 @@
     "ember-export-application-global": "^1.0.4",
     "ember-load-initializers": "^0.5.0",
     "ember-resolver": "^2.0.3",
-    "ember-try": "^0.1.2",
-    "loader.js": "^4.0.0"
+    "ember-try": "^0.2.2",
+    "glob": "^7.0.3",
+    "loader.js": "^4.0.0",
+    "mocha": "^2.4.5"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "ember-cli-deploy-plugin"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.1.5"
+    "core-object": "^2.0.0",
+    "ember-cli-babel": "^5.1.5",
+    "ember-cli-deploy-plugin": "^0.2.6",
+    "minimatch": "^3.0.0",
+    "ssh2": "^0.5.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
