--- a/package.json
+++ b/package.json
@@ -42,15 +42,13 @@
     "loader.js": "^4.0.0",
     "mocha": "^2.4.5"
   },
-  "keywords": [
-    "ember-addon",
-    "ember-cli-deploy-plugin"
-  ],
+  "keywords": ["ember-addon", "ember-cli-deploy-plugin"],
   "dependencies": {
     "core-object": "^2.0.0",
     "ember-cli-babel": "^5.1.5",
     "ember-cli-deploy-plugin": "^0.2.6",
     "minimatch": "^3.0.0",
+    "rsvp": "^3.1.0",
     "ssh2": "^0.5.0"
   },
   "ember-addon": {
